# blockchain-qa

./: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  TEST_STRATEGY.md  docker-compose.yml
.github/workflows/: ci-contracts.yml  ci-e2e.yml  ci-services.yml  ci-zk-prover.yml
cli/: .env.example  Makefile  START_HERE.sh  go.mod  go.sum
cli/cmd/poll-cli/: main.go
cli/internal/bindings/: poll.go  pollfactory.go
cli/internal/commands/: close_poll.go  create_poll.go  reveal.go  root.go  state.go  view_results.go  vote.go
cli/internal/wallet/: wallet.go
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MockOracle.sol  MockZKVerifier.sol  Poll.sol  PollFactory.sol
contracts/src/interfaces/: IOracle.sol  IPoll.sol  IZKVerifier.sol
contracts/test/unit/: Poll.t.sol
e2e/: .env.example  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/tests/: api-endpoints.test.ts  oracle-scenarios.test.ts  poll-lifecycle.test.ts
e2e/utils/: api.ts  blockchain.ts
indexer/: .env.example  go.mod  go.sum
indexer/cmd/api/: main.go
indexer/cmd/indexer/: main.go
indexer/internal/blockchain/: client.go  listener.go
indexer/internal/database/: db.go  events.go  models.go  polls.go  results.go  votes.go
indexer/internal/handlers/: polls.go
indexer/migrations/: 001_create_polls.sql
oracle/: .env.example  go.mod
oracle/cmd/oracle/: main.go
zk-prover/: Cargo.toml
zk-prover/benches/: proof_bench.rs
zk-prover/src/: error.rs  lib.rs  prover.rs  types.rs
zk-prover/src/circuit/: mod.rs  vote_proof.rs
(+3 files in other folders)
