[package]
name = "zk-prover"
version = "0.1.0"
edition = "2021"
authors = "Harry"
description = "Zero-knowledge proof system for confidential poll voting"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Arkworks cryptography
ark-ff = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-crypto-primitives = "0.4"
ark-groth16 = "0.4"

# BN254 curve (Ethereum-compatible)
ark-bn254 = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Hashing
sha2 = "0.10"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = []
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "web-sys",
    "getrandom/js"
]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-std/parallel"]

[[bench]]
name = "proof_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
